# hala-visibility-rendering

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_CN.md  README_JP.md  README_KO.md
assets/: rgb.gltf
conf/: config.toml  programs.toml
raws/: rgb.blend
shaders/: Cargo.toml  build.rs
shaders/src/: make_shaders.toml
shaders/src/hala-vis-renderer/: clear_indirect_buffer.comp.glsl  clear_indirect_buffer.cs_6_8.hlsl  culling.glsl  culling.hlsl  depth_reduction.frag.glsl  depth_reduction.ps_6_8.hlsl  lighting.frag.glsl  lighting.ps_6_8.hlsl  material_classification.comp.glsl  material_classification.cs_6_8.hlsl  material_depth.frag.glsl  material_depth.ps_6_8.hlsl  material_tile.frag.glsl  material_tile.hlsl  material_tile.ps_6_8.hlsl  material_tile.vert.glsl  material_tile.vs_6_8.hlsl  no_culling_visibility_buffer.as_6_8.hlsl  no_culling_visibility_buffer.task.glsl  one_pass_culling.as_6_8.hlsl  one_pass_culling.task.glsl  pre_culling.as_6_8.hlsl  pre_culling.task.glsl  visibility.glsl  visibility.hlsl  visibility_buffer.as_6_8.hlsl  visibility_buffer.frag.glsl  visibility_buffer.mesh.glsl  visibility_buffer.ms_6_8.hlsl  visibility_buffer.ps_6_8.hlsl  visibility_buffer.task.glsl
shaders/src/inc/: color_mapping.glsl  color_mapping.hlsl  color_space.glsl  color_space.hlsl  defines.glsl  defines.hlsl  hash.glsl  hash.hlsl  scene.glsl  scene.hlsl  types.glsl  types.hlsl  (+2 more)
src/: main.rs
src/config/: gpu_programs.rs  mod.rs  window.rs
src/renderer/: mod.rs  renderer_debug.rs  renderer_impl.rs  renderer_pass.rs  renderer_setup.rs  renderer_trait.rs
(+28 files in other folders)
